--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,5 @@
 .idea/
 
 # Ignoriere alle Inhalte im Ordner `data`, außer `.keep`, um die Ordnerstruktur zu erhalten
-scraper/src/data/*
-!scraper/src/data/.keep
+scraper/data/output/*
+!scraper/data/output/.keep
