--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 # Ignoriere alle Inhalte im Ordner `data`, außer `.keep`, um die Ordnerstruktur zu erhalten
 scraper/data/output/*
 !scraper/data/output/.keep
+
+# logs
+scraper/src/logs/
