Sitemap Logik in ConfigLoader gekapselt.
Sitemap Config-Detei von JSON auf YAML umgestellt.

--- a/scraper/config/sitemaps.yaml
+++ b/scraper/config/sitemaps.yaml
@@ -1,2 +1,3 @@
 sitemaps:
-  typ: https://www.bisafans.de/sitemap_typendex.xml
+  typen: https://www.bisafans.de/sitemap_typendex.xml
+  test: https://www.google.de
