--- a/scraper/config/sitemaps.yaml
+++ b/scraper/config/sitemaps.yaml
@@ -1,3 +1,3 @@
 sitemaps:
-  typen: https://www.bisafans.de/sitemap_typendex.xml
+  typendex: https://www.bisafans.de/sitemap_typendex.xml
   test: https://www.google.de
