--- a/scraper/config/sitemaps.yaml
+++ b/scraper/config/sitemaps.yaml
@@ -1,3 +1,4 @@
 sitemaps:
   typendex: https://www.bisafans.de/sitemap_typendex.xml
+  attackendex: https://www.bisafans.de/sitemap_attackendex.xml
   test: https://www.google.de
