--- a/scraper/config/sitemaps.yaml
+++ b/scraper/config/sitemaps.yaml
@@ -1,4 +1,6 @@
 sitemaps:
+  #sitemap: https://www.bisafans.de/sitemap.xml
   typendex: https://www.bisafans.de/sitemap_typendex.xml
   attackendex: https://www.bisafans.de/sitemap_attackendex.xml
+  faehigkeitendex: https://www.bisafans.de/sitemap_faehigkeitendex.xml
   test: https://www.google.de
