--- a/scraper/config/sitemaps.yaml
+++ b/scraper/config/sitemaps.yaml
@@ -3,4 +3,5 @@ sitemaps:
   typendex: https://www.bisafans.de/sitemap_typendex.xml
   attackendex: https://www.bisafans.de/sitemap_attackendex.xml
   faehigkeitendex: https://www.bisafans.de/sitemap_faehigkeitendex.xml
+  pokedex: https://www.bisafans.de/sitemap_pokedex.xml
   test: https://www.google.de
